Aws changes